--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         
         <div id="bar">
             <div id="barra-direita"></div>
-            <div id="barra-esquerda"></div>
-            <div id="quadrado-barra">
+            <div class="barra-esquerda"></div>
+            <div class="quadrado-barra">
                 <div id="linha-diagonal1"></div>
                 <div id="linha-diagonal2"></div>
             </div>
@@ -36,10 +36,8 @@
            
             <aside id="home-aside">
                 <p>
-                    Apaixonado por criar experiências digitais intuitivas que tornam a vida das pessoas mais fácil. Com
-                    habilidades em HTML, CSS e JavaScript, adoro transformar designs em realidade e construir interfaces
-                    interativas. Explore meu portfólio para ver alguns dos meus trabalhos mais recentes e sinta-se à
-                    vontade para entrar em contato comigo para discutir como podemos colaborar em seu próximo projeto.
+                    Adoro transformar designs em realidade. Explore meu portfólio para ver alguns dos meus trabalhos mais recentes. Sinta-se à
+                    vontade para entrar em contato comigo, e assim discutirmos como poderei colaborar em seu próximo projeto.
                 </p>
             </aside>
 
