index.html location fix

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no">
   <title>Juan Rodrigues Portfólio</title>
-  <link rel="icon" href="assets/img/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="./public/assets/img/favicon.ico" type="image/x-icon">
   
 </head>
 
@@ -29,19 +29,19 @@
           <table>
             <li>
               <div class="item-project">
-                <img src="assets/img/EmBreveImg.png" alt="projeto1" class="img-project" id="img1">
+                <img src="./public/assets/img/EmBreveImg.png" alt="projeto1" class="img-project" id="img1">
                 <label for="img1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum
                   placeat error deserunt obcaecati.
                   <br>
-                  <img src="assets\img\html.png" class="img-fluid rounded-top" alt="icone html" height="25px">
-                  <img src="assets\img\css.png" class="img-fluid rounded-top" alt="icone css" height="25px">
-                  <img src="assets\img\js.png" class="img-fluid rounded-top" alt="icone js" height="25px">
+                  <img src="./public/assets/img/html.png" class="img-fluid rounded-top" alt="icone html" height="25px">
+                  <img src="./public/assets/img/css.png" class="img-fluid rounded-top" alt="icone css" height="25px">
+                  <img src="./public/assets/img/js.png" class="img-fluid rounded-top" alt="icone js" height="25px">
                 </label>
               </div>
             </li>
             <li>
               <div class="item-project">
-                <img src="assets/img/EmBreveImg.png" alt="projeto1" class="img-project" id="img2">
+                <img src="./public/assets/img/EmBreveImg.png" alt="projeto1" class="img-project" id="img2">
                 <label for="img2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum
                   placeat
                   error deserunt obcaecati
@@ -50,7 +50,7 @@
             </li>
             <li>
               <div class="item-project">
-                <img src="assets/img/EmBreveImg.png" alt="projeto1" class="img-project" id="img3">
+                <img src="./public/assets/img/EmBreveImg.png" alt="projeto1" class="img-project" id="img3">
                 <label for="img3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum
                   placeat
                   error deserunt obcaecati
@@ -59,7 +59,7 @@
             </li>
             <li>
               <div class="item-project">
-                <img src="assets/img/EmBreveImg.png" alt="projeto1" class="img-project" id="img4">
+                <img src="./public/assets/img/EmBreveImg.png" alt="projeto1" class="img-project" id="img4">
                 <label for="img4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum
                   placeat
                   error deserunt obcaecati
@@ -83,7 +83,7 @@
     <div id="particles-js"></div>
 
     <div class="info">
-      <img src="assets/img/photoIinfo.jpg" alt="" height="220px" id="imgInfo">
+      <img src="./public/assets/img/photoIinfo.jpg" alt="" height="220px" id="imgInfo">
       <label for="imgInfo">
         <a href="https://github.com/x-Cloudy/" target="_blank">Github ↗</a>
         <a href="https://www.instagram.com/cloudy_rrf/" target="_blank">Instagram ↗</a>
@@ -154,9 +154,9 @@
     </header>
 
   
-    <script src="./assets/js/bundle.js"></script>
-    <script src="../src/modules/particles.js"></script>
-    <script src="../src/modules/app.js"></script>
+    <script src="./public/assets/js/bundle.js"></script>
+    <script src="./src/modules/particles.js"></script>
+    <script src="./src/modules/app.js"></script>
 </body>
 
 </html>
